<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="Početna"
        android:icon="@drawable/ic_nav_plant" />

    <item
        android:id="@+id/nav_garden"
        android:title="Vrt"
        android:icon="@drawable/ic_nav_water_drop" />

    <item
        android:id="@+id/nav_stats"
        android:title="Statistike"
        android:icon="@drawable/ic_nav_chart" />

</menu>